<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gradient_start_color"
        android:orientation="vertical"
        tools:context=".SignUpActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_6sdp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/_40ssp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_30sdp"
            app:cardElevation="@dimen/_35sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_edit_text"
                android:orientation="vertical"
                android:padding="@dimen/_14sdp">

                <EditText
                    android:id="@+id/sign_up_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/custom_edit_text"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/_6sdp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_6sdp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/sign_up_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:autofillHints="password"
                    android:background="@drawable/custom_edit_text"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/_6sdp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/_6sdp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/sign_up_rewrite_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:autofillHints="password"
                    android:background="@drawable/custom_edit_text"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/_6sdp"
                    android:hint="@string/rewrite_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/_6sdp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/sign_up_first_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:autofillHints="name"
                    android:background="@drawable/custom_edit_text"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="@dimen/_6sdp"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:padding="@dimen/_6sdp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/sign_up_last_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:autofillHints="name"
                    android:background="@drawable/custom_edit_text"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="@dimen/_6sdp"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:padding="@dimen/_6sdp"
                    android:textColor="@color/black" />

                <com.example.opportunity.CustomEditText
                    android:id="@+id/sign_up_birth_day_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:background="@drawable/custom_edit_text"
                    android:drawableStart="@drawable/ic_calendar"
                    android:drawablePadding="@dimen/_6sdp"
                    android:enabled="true"
                    android:hint="@string/birth_day"
                    android:padding="@dimen/_6sdp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/sign_up_address_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:autofillHints="postalAddress"
                    android:background="@drawable/custom_edit_text"
                    android:drawableStart="@drawable/ic_place"
                    android:drawablePadding="@dimen/_6sdp"
                    android:enabled="true"
                    android:hint="@string/address"
                    android:inputType="textPostalAddress"
                    android:padding="@dimen/_6sdp"
                    android:textColor="@color/black" />


                <EditText
                    android:id="@+id/phone_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:background="@drawable/custom_edit_text"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="@dimen/_6sdp"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:padding="@dimen/_6sdp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:background="@drawable/custom_edit_text"
                    app:startIconDrawable="@drawable/ic_specialty"
                    app:startIconTint="@color/gradient_start_color">

                    <AutoCompleteTextView
                        android:id="@+id/sign_up_specialty_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent"
                        android:completionThreshold="1"
                        android:drawablePadding="-8dp"
                        android:dropDownWidth="match_parent"
                        android:dropDownHeight="200dp"
                        android:dropDownHorizontalOffset="10dp"
                        android:dropDownVerticalOffset="10dp"
                        android:hint="@string/select_your_specialty"
                        android:inputType="none"
                        android:padding="@dimen/_6sdp"
                        android:popupElevation="@dimen/_8sdp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/sign_up_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_56sdp"
                    android:layout_marginTop="@dimen/_28sdp"
                    android:backgroundTint="@color/gradient_start_color"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_16ssp"
                    app:cornerRadius="@dimen/_18sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:background="@color/light_gray" />

                <TextView
                    android:id="@+id/login_redirect_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:padding="@dimen/_6sdp"
                    android:text="@string/already_have_an_account_log_in"
                    android:textColor="@color/dark_blue"
                    android:textSize="@dimen/_16ssp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
